Mod balance adjustment

--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -14,13 +14,21 @@ Mochent = 莫辰特
 # Leader
 Havest = 哈维斯特
 
-The people of the Kingdom For Mochent welcome you. = 莫辰特王国欢迎你.
+If you don't take my advice, you'll regret it, I promise you. = 朕保之，若不受朕意, 将有尔悔焉.
+Armed Merchant Corps Forward!! = 武装商帮军团前进!!
+Want to be my enemy? daydreaming! = 尔竟欲朕为敌邪？痴想！
+The people of the Kingdom For Mochent welcome you. = 莫辰特王国欢迎尔.
+
+My friend, are you interested in this arrangement? = 吾友, 可兴乎？
 
 # Unique
 Good Trade Sense = 经商之道
 
 # Citie
 Empyrean = 九重
+Salt City = 盐城
+Grain City = 粮城
+Gold City = 金城
 
 # Spy
 Gold = 金
